Name web servere(docs, api) package api. Setup minimal docs, openapi spec, routes etc.
